[package]
name = "cast_client"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version = "0.35", features = ["glow", "persistence", "wayland", "x11"], default-features = false}
tokio = {version = "1.53.1", features = ["macros","rt", "net"]}
tokio-util = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
futures-util = {version = "0.3.33", default-features = false, features = ["std"]} 
eventsource-stream = "0.2"
serde = { version = "1.0.229", features = ["derive"], default-features = false}
serde_json = "1.0.151"
egui_commonmark = { version = "0.24", default-features = false, features = ["pulldown_cmark", "better_syntax_highlighting"] }
image = { version = "0.25", default-features = false, features = ["png"] }
mimalloc = { version = "0.1.50", features = ["override"], default-features = false}
dirs = "6.0"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
debug = true 
codegen-units = 1
